SPARK-1877 add a notice about required restart

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -322,7 +322,7 @@ checkbox.show.toaster = Rodyti i\u0161\u0161okant\u012f prane\u0161im\u0105
 checkbox.disable.asterisk.toaster = I\u0161jungti skambu\u010Dio i\u0161\u0161okant\u012F prane\u0161im\u0105
 checkbox.split.chat.window = Lango \u012ft&virtinimas (reik\u0117s i\u0161 naujo paleisti program\u0105)
 checkbox.start.in.tray = &Startuoti sistemos juostel\u0117je
-checkbox.click.single.tray = &Naudoti vien\u0105 paspaudim\u0105 sistemos juostel\u0117je, kad pakelti Spark \u012f priek\u012f
+checkbox.click.single.tray = Vie&nas paspaudimas sistemos juostel\u0117je pakelia Spark lang\u0105
 checkbox.tabs.on.top = &Pokalbi\u0173 korteles rodyti vir\u0161uje (reik\u0117s i\u0161 naujo paleisti program\u0105)
 checkbox.use.compression = Nau&doti suspaudim\u0105
 checkbox.use.debugger.on.startup = S&tartavus \u012fjungti klaid\u0173 paie\u0161kos veiksen\u0105 
@@ -434,7 +434,7 @@ label.received = &Gautas
 label.rename.to = Pervardyti \u012f
 label.resource = &Resursas
 label.response.timeout = R&eakcijos laikas (sek.)
-label.reconnect.delay = Pakartoninio prisijungimo atid\u0117jimas (sek.)
+label.reconnect.delay = Prisijungimo bandym\u0173 intervalas (sek.) (reikalingas perkrovimas)
 label.room = &Kambarys
 label.room.name = &Kambario vardas
 label.room.topic = Kambario pokalbio tema
