--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -364,7 +364,7 @@ checkbox.show.toaster = Show a &toast popup
 checkbox.disable.asterisk.toaster = Disable phone toast popup
 checkbox.split.chat.window = Dock windows (requires restart)
 checkbox.start.in.tray = &Start in system tray
-checkbox.click.single.tray = &Use single click in system tray to bring spark to front
+checkbox.click.single.tray = S&ingle click in system tray brings Spark to front
 checkbox.tabs.on.top = Chat tabs &appear on top (requires restart)
 checkbox.use.compression = Use compression
 checkbox.use.debugger.on.startup = Start debugger on startup
@@ -475,7 +475,7 @@ label.received = Received
 label.rename.to = Rename to
 label.resource = Resource
 label.response.timeout = &Response timeout (sec)
-label.reconnect.delay = Reconnection Delay (sec)
+label.reconnect.delay = Reconnection Delay (sec) (restart required)
 label.room = Room
 label.room.name = Room name
 label.room.topic = Room topic
