Now dialog show up when there is less than 2 characters. I can't make it less, because if there is just one letter then search time is too long and smack return exception: org.jivesoftware.smack.SmackException$NoResponseException: No response received within reply timeout. Timeout was 10000ms (~10s).

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -797,7 +797,7 @@ message.room.destruction.reason = Reason for destroying the room?
 message.room.information.for = Room information for {0}
 message.save.profile = To save changes to your profile, click save
 message.search.for.contacts = Search for contacts
-message.search.input.short = Please provide at least five letters.
+message.search.input.short = Please provide at least two letters.
 message.search.for.other.people = Search for other people on the server
 message.search.service.not.available = Unable to contact search service
 message.searching.please.wait = Searching, please wait...
