--- a/core/src/main/resources/i18n/spark_i18n_de.properties
+++ b/core/src/main/resources/i18n/spark_i18n_de.properties
@@ -652,7 +652,7 @@ message.send.picture = Bildschirminhalt versenden.
 message.sent.offline.files = Sie haben offline Dateien gesendet.
 message.spark.secure = Sichere Verbindung aktiv.
 message.search.for.contacts = Nach Kontakten suchen.
-message.search.input.short = Bitte geben Sie mehr als fünf Zeichen ein.
+message.search.input.short = Bitte geben Sie mehr als ein Zeichen ein.
 message.end.conversation = Soll diese Sitzung beendet werden?
 message.end.chat = Soll dieser Chat beendet werden?
 message.close.this.chat = Diesen Chat schließen
