--- a/core/src/main/resources/i18n/spark_i18n_fr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fr.properties
@@ -562,7 +562,7 @@ message.save.profile = Pour enregistrer votre profil, cliquez sur Sauver.
 message.search.for.contacts = Recherche de Contacts.
 message.search.for.history = Rechercher dans l'historique des conversations
 message.search.for.other.people = Rechercher les utilisateurs de ce m\u00EAme serveur.
-message.search.input.short = SVP fournir au moins cinq lettres.
+message.search.input.short = SVP fournir au moins deux lettres.
 message.search.service.not.available = Service de Recherche hors service.
 message.searching.please.wait = Recherche en cours, veuillez patienter...
 message.select.add.room.to.add = Veuillez \u00E9lectionner un salon a ajouter \u00E0 vos favoris.
