--- a/core/src/main/resources/i18n/spark_i18n_it.properties
+++ b/core/src/main/resources/i18n/spark_i18n_it.properties
@@ -787,7 +787,7 @@ message.room.information.for = Informazioni della stanza per {0}
 message.save.profile = Per salvare le modifiche al tuo profilo, fai click su salva.
 message.search.for.contacts = Ricerca Contatti.
 message.search.for.other.people = Ricerca altre persone collegate al server.
-message.search.input.short = Per favore inserire almeno cinque lettere.
+message.search.input.short = Per favore inserire almeno due lettere.
 message.search.service.not.available = Impossibile contattare i servizi di ricerca.
 message.searching.please.wait = Ricerca in corso. Attendere prego...
 message.select.add.room.to.add = Seleziona una stanza da inserire nell'elenco dei servizi.
