--- a/core/src/main/resources/i18n/spark_i18n_pl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pl.properties
@@ -585,7 +585,7 @@ message.room.information.for = Informacje o pokoju {0}
 message.save.profile = Aby zapisa\u0107 zmiany w profilu, naci\u015bnij Zapisz
 message.search.for.contacts = Szukaj kontakt\u00f3w
 message.search.for.other.people = Szukaj innych os\u00f3b na serwerze
-message.search.input.short = Podaj przynajmniej pi\u0119\u0107 liter.
+message.search.input.short = Podaj przynajmniej dwie litery.
 message.search.service.not.available = Nie mo\u017cna skontaktowa\u0107 si\u0119 z us\u0142ug\u0105 wyszukiwania
 message.searching.please.wait = Trwa wyszukiwanie, prosz\u0119 czeka\u0107
 message.select.add.room.to.add = Wybierz pok\u00f3j do dodania do listy us\u0142ug
