SPARK-1537 added LT translation

--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -751,7 +751,9 @@ message.room.destruction.reason = Kokia kambario pa\u0161alinimo prie\u017eastis
 message.room.information.for = Informacija apie kambar\u012f {0}
 message.save.profile = Paspaud\u0119 mygtuk\u0105 \u201e\u012era\u0161yti\u201c i\u0161saugosite atliktus pakeitimus.
 message.search.for.contacts = Pokalbio partneri\u0173 paie\u0161ka.
+message.search.for.history = Ie\u0161koti pokalbio \u017eurnale
 message.search.for.other.people = Kit\u0173 \u017emoni\u0173 paie\u0161ka serveryje
+message.search.input.short = Pra\u0161ome pateikti bent dvi raides.
 message.search.service.not.available = Nepavyksta prisijungti prie paie\u0161kos tarnybos.
 message.searching.please.wait = Ie\u0161koma. Lukterkite\u2026
 message.select.add.room.to.add = Pasirinkite kambar\u012f, kur\u012f pageidausite \u012ftraukti \u012f paie\u0161kos tarnybos s\u0105ra\u0161us.
@@ -837,7 +839,6 @@ message.your.voice.granted = \u0160iame pokalbyje Jums suteiktas balsas.
 message.your.voice.revoked = Netekote balso.
 message.groupchat.require.password = \u0160i pokalbi\u0173 grup\u0117 priims, jei \u012fvesite slapta\u017eod\u012f.
 message.groupchat.registered.member = S\u0117kmingai prisiregistravote prie {0}
-message.search.for.history = Ie\u0161koti pokalbio \u017eurnale
 
 status.away = Pasitrauk\u0119s
 status.custom.messages = Susikurtos b\u016bsenos
