Improvements for resizing avatar image - SPARK-1904

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -737,6 +737,9 @@ message.gateway.nickname.error = Nickname needs to be supplied
 message.general.error = You have lost your connection to the server due to {0}
 message.generic.reconnect.message = You have lost your connection to the server, to login again, click on the reconnect button below
 message.idle.for = Idle for {0}
+message.image.not.square = Image is not square
+message.image.small.resolution = Image size is less than 32x32 pixels
+message.image.suggestion = Recommended image size is 64x64 pixels. You can either ignore this warning or specify another image 
 message.image.too.large = This image is too large to use, please specify an image 16k or smaller
 message.invalid.jabber.id = Not a valid Jabber ID
 message.invalid.jid.error = The JID specified is invalid
@@ -1052,6 +1055,7 @@ title.view.bookmarks = View bookmarks
 title.view.profile.for = Viewing profile for {0}
 title.view.room.information = View room information
 title.waiting.to.call = Waiting to place call
+title.warning = Warning
 title.xmpp.registration = XMPP account credentials
 title.yahoo.registration = Yahoo account credentials
 title.appearance.showVCards = Show &VCards in the contact list
