SPARK-1926 and SPARK-1927 done, added new tab in login settings (Advenced).

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -920,6 +920,7 @@ tab.personal = Personal
 tab.proxy = Proxy
 tab.sso = SSO
 tab.pki = PKI
+tab.certificates = Certificates
 title.about = About
 title.advanced.connection.preferences = Advanced connection preferences
 title.account.create.registration = Account registration
