Solves SPARK-1928, SPARK-1938 and part of SPARK-1937

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -330,6 +330,11 @@ button.view.notes = View notes
 button.view.profile = View full profile
 button.view.tasklist = View task list
 
+table.column.certificate.certificate = Certificate
+table.column.certificate.subject = Subject
+table.column.certificate.valid = Valid
+table.column.certificate.exempted = Exempted
+
 checkbox.allow.buzz = Allow users to &buzz you
 checkbox.auto.discover.port = Automatically discover host and port
 checkbox.auto.login = &Auto login
