--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -387,6 +387,12 @@ checkbox.use.hostname.as.resource = Use hostname as resource
 checkbox.use.version.as.resource = Use Spark version as resource
 checkbox.accept.all.certificates = Accept all certificates (self-signed/expired/not trusted)
 checkbox.disable.hostname.verification = Disable certificate hostname verification (not recommended)
+checkbox.accept.all = Accept all
+checkbox.accept.expired = Accept expired
+checkbox.accept.self.signed = Accept self-signed
+checkbox.accept.invalid = Accept invalid
+checkbox.check.crl = Check CRL
+checkbox.check.ocsp = Check OCSP
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
