Certificate dialog shows after click.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -1072,6 +1072,7 @@ title.xmpp.registration = XMPP account credentials
 title.yahoo.registration = Yahoo account credentials
 title.appearance.showVCards = Show &VCards in the contact list
 title.subscription.request = Subscription request
+title.certificate = Certificate
 
 tooltip.place.a.call = Place a call to this individual
 tooltip.appearance = Change the appearance of your conversations
