New certificate menu added, also stretched certificate table.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -329,6 +329,7 @@ button.update = Update
 button.view.notes = View notes
 button.view.profile = View full profile
 button.view.tasklist = View task list
+button.check.validity = Check validity
 
 table.column.certificate.certificate = Certificate
 table.column.certificate.subject = Subject
@@ -393,6 +394,10 @@ checkbox.accept.self.signed = Accept self-signed
 checkbox.accept.invalid = Accept invalid
 checkbox.check.crl = Check CRL
 checkbox.check.ocsp = Check OCSP
+
+radio.certificate.trust = Trust
+radio.certificate.distrust = Distrust
+
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
@@ -529,6 +534,18 @@ label.apple.keychain = Apple KeyChain
 label.add.to.roster = Add user to your roster
 label.audio.device = &Audio device
 label.video.device = &Video device
+label.certificate.version = Version
+label.certificate.serial.number = Serial number
+label.certificate.signature.value = Signature value
+label.certificate.signature.algorithm = Signature algorithm
+label.certificate.issuer = Issuer
+label.certificate.subject = Subject
+label.certificate.not.before = Invalid before
+label.certificate.not.after = Invalid after
+label.certificate.public.key = Public key
+label.certificate.public.key.algorithm = Public key algorithm
+label.certificate.issuer.unique.id = Issuer unique ID
+label.certificate.subject.unique.id = Subject unique ID
 
 menuitem.about = About
 menuitem.actions = Actions
