Requested changes. Buttons for showing certificate and adding new certificate. Some javadocs and minor cosmetic changes.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -330,6 +330,7 @@ button.view.notes = View notes
 button.view.profile = View full profile
 button.view.tasklist = View task list
 button.check.validity = Check validity
+button.show.certificate = Show certificate
 
 table.column.certificate.certificate = Certificate
 table.column.certificate.subject = Subject
@@ -546,6 +547,7 @@ label.certificate.public.key = Public key
 label.certificate.public.key.algorithm = Public key algorithm
 label.certificate.issuer.unique.id = Issuer unique ID
 label.certificate.subject.unique.id = Subject unique ID
+label.certificate.add.certificate.to.truststore = Add certificate to Truststore
 
 menuitem.about = About
 menuitem.actions = Actions
