Implemented adding certificates and changed some of the acces modifiers.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -663,6 +663,7 @@ menuitem.collapse.all.groups = Collapse all groups
 menuitem.inivite.again = Invite again
 menuitem.chatframe.option = Options
 menuitem.add.groupchat.invitetobookmark = Automatically invite users to bookmarked room
+menuitem.certificate.files.filter = Certificates files (*.cer), (*.crt), (*.der)
 
 message = Message
 message.account.create = Create a new chat account
@@ -1175,4 +1176,4 @@ action.viewlog=View Log
 dialog.confirm.to.reveal.visibility.title=Are you sure?
 dialog.confirm.to.reveal.visibility.msg=If you are going to proceed your invisibility will be revealed
 dialog.confirm.close.all.conferences.if.invisible.msg=If you want to proceed all conference room will be closed
-
+dialog.provide.alias = Provide alias for Truststore entry
