Requested changes and some Javadocs.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -337,7 +337,8 @@ table.column.certificate.subject = Subject
 table.column.certificate.valid = Valid
 table.column.certificate.exempted = Exempted
 
-table.column.certificate.certificate = Certificate
+table.column.certificate.alias = Alias
+table.column.certificate.issuer = Issuer
 table.column.certificate.subject = Subject
 table.column.certificate.valid = Valid
 table.column.certificate.exempted = Exempted
@@ -1176,4 +1177,4 @@ action.viewlog=View Log
 dialog.confirm.to.reveal.visibility.title=Are you sure?
 dialog.confirm.to.reveal.visibility.msg=If you are going to proceed your invisibility will be revealed
 dialog.confirm.close.all.conferences.if.invisible.msg=If you want to proceed all conference room will be closed
-dialog.provide.alias = Provide alias for Truststore entry
+dialog.provide.alias.and.confirm = Provide alias for Truststore entry. \n After adding this certificate, Spark will be able to establish secured \n communications with servers that are identified by this certificate. \n Are you sure you want to add this certificate?
