Error message should be shown when room config update failed.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -422,6 +422,7 @@ group.search.form = Search form
 group.search.results = Search results
 group.chat.name.notification = Seen your name...
 group.chat.name.match = Your name has been said in group chat:
+group.send_config.error = An exception occurred while trying to save the updated form!
 
 label.na = n/a
 label.home = Home
