SPARK-1950 remove & from Plugins menu translations

--- a/core/src/main/resources/i18n/spark_i18n_es.properties
+++ b/core/src/main/resources/i18n/spark_i18n_es.properties
@@ -260,7 +260,7 @@ menuitem.move.to = Mover a
 menuitem.online.help = Foro de Spark
 menuitem.open = Abrir
 menuitem.open.with = Abrir con...
-menuitem.plugins = &Plugins
+menuitem.plugins = Plugins
 menuitem.preferences = Preferencias
 menuitem.refresh = Actualizar
 menuitem.remove = Eliminar
