--- a/core/src/main/resources/i18n/spark_i18n_fi.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fi.properties
@@ -823,7 +823,7 @@ menuitem.connect = Tiedosto
 menuitem.contacts = Tuttavat
 menuitem.actions = Toiminnot
 menuitem.exit = Sulje
-menuitem.plugins = &Liitännäiset
+menuitem.plugins = Liitännäiset
 menuitem.logout.no.status = Kirjaudu ulos
 menuitem.logout.with.status = Kirjaudu ulos ja aseta tila
 menuitem.show.traffic = Näytä liikenne
