--- a/core/src/main/resources/i18n/spark_i18n_fr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fr.properties
@@ -360,7 +360,7 @@ menuitem.move.to = D\u00E9placer vers
 menuitem.online.help = Aide en Ligne
 menuitem.open = Ouvrir
 menuitem.open.with = Ouvrir avec...
-menuitem.plugins = &Plugins
+menuitem.plugins = Plugins
 menuitem.preferences = Pr\u00E9f\u00E9rences
 menuitem.refresh = Rafraichir
 menuitem.remove = Enlever
