--- a/core/src/main/resources/i18n/spark_i18n_it.properties
+++ b/core/src/main/resources/i18n/spark_i18n_it.properties
@@ -575,7 +575,7 @@ menuitem.move.to = Sposta in
 menuitem.online.help = Online Help
 menuitem.open = Apri
 menuitem.open.with = Apri con...
-menuitem.plugins = &Plugins
+menuitem.plugins = Plugins
 menuitem.preferences = Preferenze
 menuitem.remove = Elimina
 menuitem.remove.alert.when.online = Elimina Alert
