--- a/core/src/main/resources/i18n/spark_i18n_nl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_nl.properties
@@ -247,8 +247,8 @@ menuitem.delete = Verwijderen
 menuitem.delete.login.information = Verwijder aanmeldingsinformatie
 menuitem.destroy.room = Ruimte opheffen
 menuitem.edit = Bewerken
-menuitem.edit.my.profile = Mijn profiel &bewerken...
-menuitem.edit.status.message = Eigen statusmeldingen bewerken...
+menuitem.edit.my.profile = Mijn profiel &bewerken
+menuitem.edit.status.message = Eigen statusmeldingen bewerken
 menuitem.enter.login.information = Geef aanmeldingsinformatie
 menuitem.exit = Afsluiten
 menuitem.grant.moderator = Maak moderator
@@ -262,14 +262,14 @@ menuitem.join.room = Ruimte binnengaan
 menuitem.kick.user = Verwijder gebruiker
 menuitem.languages = Talen
 menuitem.logout.no.status = Afmelden
-menuitem.logout.with.status = Afmelden met reden...
+menuitem.logout.with.status = Afmelden met reden
 menuitem.lookup.profile = Profiel &opzoeken
 menuitem.copy.to = Kopi\u0091ren naar
 menuitem.move.to = Verplaatsen naar
 menuitem.online.help = Spark Fora
 menuitem.open = Openen
-menuitem.plugins = &Plugins...
-menuitem.preferences = Voorkeuren...
+menuitem.plugins = Plugins
+menuitem.preferences = Voorkeuren
 menuitem.remove = Verwijder
 menuitem.remove.alert.when.online = Verwijder waarschuwing
 menuitem.remove.bookmark = Bladwijzer verwijderen
@@ -280,10 +280,10 @@ menuitem.rename = Hernoemen
 menuitem.revoke.moderator = Geen moderator meer
 menuitem.revoke.voice = Trek stemrecht in
 menuitem.save = Opslaan
-menuitem.save.as = Opslaan als...
+menuitem.save.as = Opslaan als
 menuitem.send.a.file = Bestand versturen
-menuitem.send.a.message = Bericht versturen aan geselecteerde gebruikers...
-menuitem.set.status.message = Statusmelding instellen...
+menuitem.send.a.message = Bericht versturen aan geselecteerde gebruikers
+menuitem.set.status.message = Statusmelding instellen
 menuitem.show.empty.groups = Lege groepen tonen
 menuitem.show.offline.group = Afgemeldde gebruikers in aparte groep
 menuitem.show.traffic = Debug- en verkeersmonitor
@@ -291,7 +291,7 @@ menuitem.sign.in = Aanmelden
 menuitem.sign.in.at.login = Automatisch aanmelden
 menuitem.sign.out = Afmelden
 menuitem.start.a.chat = Conversatie beginnen
-menuitem.start.a.conference = Conferentie beginnen...
+menuitem.start.a.conference = Conferentie beginnen
 menuitem.status = Status
 menuitem.subscribe.to = Abonneer op
 menuitem.unban = Weer toestaan
