--- a/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
@@ -447,7 +447,7 @@ menuitem.connect = Arquivo
 menuitem.contacts = Contatos
 menuitem.actions = A\u00e7\u00f5es
 menuitem.exit = Sair
-menuitem.plugins = &Plugins
+menuitem.plugins = Plugins
 menuitem.logout.no.status = Log out
 menuitem.logout.with.status = Log out com motivo
 menuitem.show.traffic = Ver Janela de Tr\u00e1fego
