--- a/core/src/main/resources/i18n/spark_i18n_sv.properties
+++ b/core/src/main/resources/i18n/spark_i18n_sv.properties
@@ -625,7 +625,7 @@ menuitem.connect = Fil
 menuitem.contacts = Kontakter
 menuitem.actions = Kommandon
 menuitem.exit = Avsluta
-menuitem.plugins = &Plugin
+menuitem.plugins = Plugin
 menuitem.logout.no.status = Logga ut
 menuitem.logout.with.status = Logga ut och ange status
 menuitem.show.traffic = Visa trafikfönster
