--- a/core/src/main/resources/i18n/spark_i18n_tr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_tr.properties
@@ -482,7 +482,7 @@ menuitem.move.to = Ta\u015f\u0131
 menuitem.online.help = Spark forumlar\u0131
 menuitem.open = A\u00e7
 menuitem.open.with = Birlikte a\u00e7...
-menuitem.plugins = &Eklentiler
+menuitem.plugins = Eklentiler
 menuitem.preferences = Se\u00e7enekler
 menuitem.remove = Sil
 menuitem.remove.alert.when.online = Alarm\u0131 sil
