SPARK-1950 remove & from Plugins menu translations

--- a/core/src/main/resources/i18n/spark_i18n_cs.properties
+++ b/core/src/main/resources/i18n/spark_i18n_cs.properties
@@ -233,7 +233,7 @@ label.room.name = J&m\u00e9no M\u00edstnosti
 label.room.topic= &T\u00e9ma M\u00edstnosti
 label.password = &Heslo
 label.confirm.password = &Potvrdit Heslo
-label.server = Do&mйna
+label.server = Do&ména
 label.create.account = Vytvo\u0159it \u00fa\u010det
 label.close = Z&av\u0159\u00edt
 label.ok = OK
