--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -1178,7 +1178,6 @@ dialog.confirm.to.reveal.visibility.title=Are you sure?
 dialog.confirm.to.reveal.visibility.msg=If you are going to proceed your invisibility will be revealed
 dialog.confirm.close.all.conferences.if.invisible.msg=If you want to proceed all conference room will be closed
 dialog.certificate.provide.alias.and.confirm = \t Provide alias for Truststore entry. \n Are you sure you want to add this \n certificate to your Truststore?
-dialog.certificate.show = <html>This is the certificate you try to add to Truststore <br><br> After adding this certificate, Spark will be able to establish secured <br> communications with servers that are identified by this certificate. <br><br> If you are sure that you want to add this certificate click OK button.</html>
-dialog.certificate.wrong.alias = Cannot add second certificate with the same alias to Truststore. \n Please choose other alias.
-dialog.certificate.alias.cannot.be.empty = Certificate's alias cannot be empty.
+dialog.certificate.show = <html>This is the certificate you try to add to Truststore. <br><br> After adding this certificate, Spark will be able to establish secured <br> communications with servers that are identified by this certificate. <br><br> If you are sure that you want to add this certificate click Ok button.</html>
 dialog.certificate.cannot.have.copy = This certificate is already stored within Truststore.
+dialog.certificate.has.been.added = Certificate has been added to the Truststore.
