--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -1181,3 +1181,4 @@ dialog.certificate.provide.alias.and.confirm = \t Provide alias for Truststore e
 dialog.certificate.show = <html>This is the certificate you try to add to Truststore. <br><br> After adding this certificate, Spark will be able to establish secured <br> communications with servers that are identified by this certificate. <br><br> If you are sure that you want to add this certificate click Ok button.</html>
 dialog.certificate.cannot.have.copy = This certificate is already stored within Truststore.
 dialog.certificate.has.been.added = Certificate has been added to the Truststore.
+dialog.certificate.is.distrusted = Certificate is invalid so it shouldn't be trusted as it is dangerous. \n If you still want to trust click on Trust radio button or add it to exception list.
