New tabel stretching, colored cells with reason of validity/invalidity, centred values.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -332,15 +332,8 @@ button.view.tasklist = View task list
 button.check.validity = Check validity
 button.show.certificate = Show certificate
 
-table.column.certificate.certificate = Certificate
 table.column.certificate.subject = Subject
-table.column.certificate.valid = Valid
-table.column.certificate.exempted = Exempted
-
-table.column.certificate.alias = Alias
-table.column.certificate.issuer = Issuer
-table.column.certificate.subject = Subject
-table.column.certificate.valid = Valid
+table.column.certificate.validity = Validity
 table.column.certificate.exempted = Exempted
 
 checkbox.allow.buzz = Allow users to &buzz you
@@ -1178,7 +1171,13 @@ dialog.confirm.to.reveal.visibility.title=Are you sure?
 dialog.confirm.to.reveal.visibility.msg=If you are going to proceed your invisibility will be revealed
 dialog.confirm.close.all.conferences.if.invisible.msg=If you want to proceed all conference room will be closed
 dialog.certificate.provide.alias.and.confirm = \t Provide alias for Truststore entry. \n Are you sure you want to add this \n certificate to your Truststore?
-dialog.certificate.show = <html>This is the certificate you try to add to Truststore. <br><br> After adding this certificate, Spark will be able to establish secured <br> communications with servers that are identified by this certificate. <br><br> If you are sure that you want to add this certificate click Ok button.</html>
+dialog.certificate.show = <html>This is the certificate you are trying to add to the Truststore. <br><br> After adding this certificate, Spark will be able to establish secured <br> communications with servers that are identified by this certificate. <br><br> If you are sure that you want to add this certificate click the OK button.</html>
 dialog.certificate.cannot.have.copy = This certificate is already stored within Truststore.
 dialog.certificate.has.been.added = Certificate has been added to the Truststore.
 dialog.certificate.is.distrusted = Certificate is invalid so it shouldn't be trusted as it is dangerous. \n If you still want to trust click on Trust radio button or add it to exception list.
+
+cert.valid = Valid
+cert.revoked = Revoked
+cert.expired = expired
+cert.not.valid.yet = Not valid yet
+cert.self.signed = Self signed 
