--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -242,6 +242,7 @@ apply = Apply
 available = Available
 broadcast = Broadcast
 cancel = Cancel
+delete = Delete
 close = Close
 create = Create
 date = Date
@@ -331,6 +332,7 @@ button.view.profile = View full profile
 button.view.tasklist = View task list
 button.check.validity = Check validity
 button.show.certificate = Show certificate
+
 
 table.column.certificate.subject = Subject
 table.column.certificate.validity = Validity
@@ -1176,10 +1178,12 @@ dialog.certificate.show = <html>This is the certificate you are trying to add to
 dialog.certificate.cannot.have.copy = This certificate is already stored within Truststore.
 dialog.certificate.has.been.added = Certificate has been added to the Truststore.
 dialog.certificate.is.distrusted = Certificate is invalid so it shouldn't be trusted as it is dangerous. \n If you still want to trust click on Trust radio button or add it to exception list.
+dialog.certificate.sure.to.delete = Are you sure that you want to delete this certificate. \n If you will do it you will be unable to establish secured connection \n to servers that are identified by this certificate.
+dialog.certificate.has.been.deleted = Certificate has been successfully deleted.
 
 cert.valid = Valid
 cert.revoked = Revoked
-cert.expired = expired
+cert.expired = Expired
 cert.not.valid.yet = Not valid yet
 cert.self.signed = Self signed 
 cert.unknown.oid = Unknown OID description.
