Added more null checks, caching NullPointerException in extensionExtractHandler. Also added information about criticality of extension.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -1182,6 +1182,10 @@ cert.revoked = Revoked
 cert.expired = expired
 cert.not.valid.yet = Not valid yet
 cert.self.signed = Self signed 
+cert.unknown.oid = Unknown OID description.
+cert.is.critical = Is critical: 
+cert.critical = Critical:
+cert.not.critical = Not critical: 
 
 cert.extensions = Certificate extensions:
 cert.extensions.unsupported = Unsupported extensions
