--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -549,6 +549,7 @@ label.certificate.public.key.algorithm = Public key algorithm
 label.certificate.issuer.unique.id = Issuer unique ID
 label.certificate.subject.unique.id = Subject unique ID
 label.certificate.add.certificate.to.truststore = Add certificate to Truststore
+label.certificate.status = Status of the certificate.
 
 menuitem.about = About
 menuitem.actions = Actions
@@ -1178,7 +1179,7 @@ dialog.certificate.show = <html>This is the certificate you are trying to add to
 dialog.certificate.cannot.have.copy = This certificate is already stored within Truststore.
 dialog.certificate.has.been.added = Certificate has been added to the Truststore.
 dialog.certificate.is.distrusted = Certificate is invalid so it shouldn't be trusted as it is dangerous. \n If you still want to trust click on Trust radio button or add it to exception list.
-dialog.certificate.sure.to.delete = Are you sure that you want to delete this certificate. \n If you will do it you will be unable to establish secured connection \n to servers that are identified by this certificate.
+dialog.certificate.sure.to.delete = Are you sure that you want to delete this certificate? \nIf you will do it you will be unable to establish secured connection \nto servers that are identified by this certificate.
 dialog.certificate.has.been.deleted = Certificate has been successfully deleted.
 
 cert.valid = Valid
