Changed Keystores paths from String to File, additional try with resources, other changes to make it work well with previous PRs.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -396,9 +396,7 @@ checkbox.accept.self.signed = Accept self-signed
 checkbox.accept.invalid = Accept invalid
 checkbox.check.crl = Check CRL
 checkbox.check.ocsp = Check OCSP
-
-radio.certificate.trust = Trust
-radio.certificate.distrust = Distrust
+checkbox.on.exception.list = On the exception list
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
