SPARK-1972: New 'security' login settings panel.
This commit adds a new 'security' tab to the advanced login settings. Here, security-related
settings are made available.

Also, this commit makes slight modifications to the other tabs, by making the components be
oriented more to the top-left corner (instead of being centered - which looks pretty ugly).

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -397,6 +397,9 @@ checkbox.accept.invalid = Accept invalid
 checkbox.check.crl = Check CRL
 checkbox.check.ocsp = Check OCSP
 checkbox.on.exception.list = On the exception list
+radio.encryptionmode.required = Required
+radio.encryptionmode.ifpossible = If possible
+radio.encryptionmode.disabled = Disabled
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
@@ -417,6 +420,7 @@ group.search.results = Search results
 group.chat.name.notification = Seen your name...
 group.chat.name.match = Your name has been said in group chat:
 group.send_config.error = An exception occurred while trying to save the updated form!
+group.encryption_mode = Encryption mode
 
 label.na = n/a
 label.home = Home
@@ -945,6 +949,7 @@ tab.conferences = Conferences
 tab.contacts = Contacts
 tab.deactivated.plugins = Deactivated plugins
 tab.general = General
+tab.security = Security
 tab.home = Home
 tab.installed.plugins = Installed plugins
 tab.personal = Personal
@@ -1104,6 +1109,9 @@ tooltip.start.chat = Start a conversation
 tooltip.view.changelog = View change log
 tooltip.view.history = View conversation history
 tooltip.view.readme = View readme
+tooltip.encryptionmode.required = Encryption is required in order to connect. If the server does not offer encryption, or if the encryption negotiaton fails, the connection to the server will fail.
+tooltip.encryptionmode.ifpossible = Encryption is used whenever it's available.
+tooltip.encryptionmode.disabled = Encryption is disabled and only non-encrypted connections will be used. If encryption is required by the server, the connection will fail.
 
 tree.conference.services = Conference services
 tree.users.in.room = Users in room
@@ -1277,7 +1285,7 @@ cert.extension.name.constraints.excluded.subtrees = Excluded subtrees
 2.5.29.68 = id-ce-attributeMappings 
 2.5.29.69 = id-ce-holderNameConstraints 
 
-2.16.840.1.113730.1.1 = 
+2.16.840.1.113730.1.1 =
 1.3.6.1.4.1.311.20.2 = szOID_ENROLL_CERTTYPE_EXTENSION
 1.3.6.1.4.1.311.21.1 = MS Certificate Services CA Version 
 1.2.840.113533.7.65.0 = Entrust version extension
