SPARK-1966, SPARK-1952, SPARK-1969, SPARK-1970, SPARK-1971 and partially SPARK-1968

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -394,7 +394,7 @@ checkbox.disable.hostname.verification = Disable certificate hostname verificati
 checkbox.accept.all = Accept all
 checkbox.accept.expired = Accept expired
 checkbox.accept.self.signed = Accept self-signed
-checkbox.accept.invalid = Accept invalid
+checkbox.accept.revoked = Accept revoked
 checkbox.check.crl = Check CRL
 checkbox.check.ocsp = Check OCSP
 checkbox.on.exception.list = On the exception list
