SPARK-1974 Update LT translation, fix EN

--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -201,6 +201,8 @@ apply = Taikyti
 available = Prieinamas
 broadcast = Transliavimas
 cancel = At\u0161aukti
+delete = I\u0161trinti
+details = Detaliau
 close = U\u017everti
 create = Sukurti
 date = Data
@@ -287,6 +289,13 @@ button.view.notes = Per\u017ei\u016br\u0117ti u\u017era\u0161us
 button.view.profile = Per\u017ei\u016br\u0117ti profil\u012f
 button.view.tasklist = Per\u017ei\u016br\u0117ti u\u017eduotis
 button.re.detect = &Aptikti i\u0161 naujo
+button.check.validity = Patikrint galiojim\u0105
+button.show.certificate = Parodyti sertifikatus
+
+
+table.column.certificate.subject = Subjektas
+table.column.certificate.validity = Galiojimas
+table.column.certificate.exempted = Atleistas
 
 checkbox.allow.buzz = &Leisti pa\u0161nekovams purtyti j\u016bs\u0173 pokalbio lang\u0105
 checkbox.auto.discover.port = &Automatinis serverio ir jo prievado aptikimas
@@ -340,6 +349,16 @@ checkbox.use.hostname.as.resource = Na&udoti kompiuterio vard\u0105 kaip resurs\
 checkbox.use.version.as.resource = Naudot&i Spark versij\u0105 kaip resurs\u0105
 checkbox.accept.all.certificates = Priimti visus sertifikatus (self-signed/negaliojantys/nepatikimi)
 checkbox.disable.hostname.verification = I\u0161jungti sertifikato vardo patikrinim\u0105 (nerekomenduojama)
+checkbox.accept.all = Priimti visus
+checkbox.accept.expired = Priimti su pasibaigusia galiojimo data
+checkbox.accept.self.signed = Priimti "self-signed"
+checkbox.accept.invalid = Priimti negaliojan\u010dius
+checkbox.check.crl = Patikrinti CRL
+checkbox.check.ocsp = Patikrinti OCSP
+checkbox.on.exception.list = I\u0161im\u010di\u0173 s\u0105ra\u0161e
+radio.encryptionmode.required = Privaloma
+radio.encryptionmode.ifpossible = Jeigu \u012fmanoma
+radio.encryptionmode.disabled = I\u0161jungta
 
 delete.log.permanently = Visi\u0161kas \u017eurnalo pa\u0161alinimas
 delete.permanently = Galutinai pa\u0161alinti?
@@ -359,6 +378,7 @@ group.search.form = Paie\u0161kos anketa
 group.search.results = Paie\u0161kos rezultatai
 group.chat.name.notification = Apie jus kalba\u2026
 group.chat.name.match = J\u016bs\u0173 vard\u0105 pamin\u0117jo grupiniame pokalbyje:
+group.encryption_mode = \u0160ifravimo veiksena
 
 label.na = n\u0117ra ira\u0161o
 label.cell = Mobilus nr.
@@ -476,6 +496,20 @@ label.apple.keychain = Apple KeyChain
 label.add.to.roster = Prid\u0117ti abonent\u0105 \u012f adresat\u0173 s\u0105ra\u0161\u0105
 label.audio.device = &Garso \u012frenginys
 label.video.device = &Vaizdo \u012frenginys
+label.certificate.version = Versija
+label.certificate.serial.number = Serijinis numeris
+label.certificate.signature.value = Para\u0161o reik\u0161m\u0117
+label.certificate.signature.algorithm = Para\u0161o algoritmas
+label.certificate.issuer = Emitentas
+label.certificate.subject = Subjektas
+label.certificate.not.before = Negalioja iki
+label.certificate.not.after = Negalioja po
+label.certificate.public.key = Vie\u0161asis raktas
+label.certificate.public.key.algorithm = Vie\u0161ojo rakto algoritmas
+label.certificate.issuer.unique.id = Emitento unikalus ID
+label.certificate.subject.unique.id = Subjekto unikalus ID
+label.certificate.add.certificate.to.truststore = Prid\u0117ti sertifikat\u0105 \u012f Truststore
+label.certificate.status = Sertifikato b\u016bsena
 
 menuitem.about = Apie
 menuitem.actions = Veiksmai
@@ -587,6 +621,7 @@ menuitem.collapse.all.groups = Vis\u0173 grupi\u0173 sutraukimas
 menuitem.inivite.again = V\u0117l pakviesti
 menuitem.chatframe.option = Parinktys
 menuitem.add.groupchat.invitetobookmark = Automati\u0161kai kviesti vartotojus \u012f pa\u017eym\u0117t\u0105 kambar\u012f
+menuitem.certificate.files.filter = Sertifikat\u0173 bylos (*.cer), (*.crt), (*.der)
 
 message.invite.to.groupchat = {0} Jus pakviet\u0117 prisijungti \u012f pokalbi\u0173 grup\u0119.
 message = Transliuojamas prane\u0161imas
@@ -693,6 +728,9 @@ message.general.error = Praradote ry\u0161\u012f su serveriu. Problemos prie\u01
 message.generic.reconnect.message = Praradote ry\u0161\u012f su serveriu. Spragtelkite \u017eemiau esant\u012f mygtuk\u0105 \u201ePrisijungti i\u0161 naujo\u201c
 message.idle.for = Neaktyvu jau {0}
 message.image.too.large = Paveikslo byla per didel\u0117. Paveiksl\u0117lis tur\u0117t\u0173 b\u016bti ne didesnis kaip 16k.
+message.image.not.square = Atvaizdas ne kvadratinis
+message.image.small.resolution = Atvaizdo dydis ma\u017eiau nei 32x32 pikseli\u0173
+message.image.suggestion = Rekomenduojamas atvaizdo dydis 64x64 pikseliai. Galite ignoruoti \u0161\u012f prane\u0161im\u0105 arba pasirinkti kit\u0105 atvaizd\u0105
 message.invalid.jabber.id = Netinkamas Jabber ID.
 message.invalid.jid.error = Nurodytas identifikatorius JID yra neteisingas.
 message.invalid.status = Nurodykite teising\u0105 b\u016bsen\u0105.
@@ -769,7 +807,8 @@ message.sent.offline.files = I\u0161siunt\u0117te byl\u0105(as) atsijungus.
 message.server.unavailable = Nepavyksta prisijungti prie serverio. Gal neteisingas serverio vardas arba jis dabar yra nepasiekiamas.
 message.service.already.exists = Paslauga jau yra.
 message.shared.group = Bendrinta grup\u0117
-message.spark.secure = Saugioji \u201eSpark\u201c veiksena.
+message.spark.secure = Saugioji Spark veiksena.
+message.spark.unsecure = Nesaugioji Spark veiksena (ry\u0161is su serveriu ne\u0161ifruotas).
 message.specify.contact.jid = Pra\u0161om nurodyti abonento \u201eJID\u201c (pvz. vardenis@jabber.org).
 message.specify.group = Nurodykite adres\u0173 grup\u0119, \u012f kuri\u0105 \u012ftrauksim nauj\u0105 abonent\u0105.
 message.specify.information.for.conference = Nurodykite informacij\u0105 apie konferencij\u0173 kambar\u012f.
@@ -864,6 +903,7 @@ tab.personal = Asmuo
 tab.proxy = Tarpinis serveris
 tab.sso = SSO
 tab.pki = PKI
+tab.certificates = Sertifikatai
 
 title.about = Apie
 title.password.required = Reikalingas slapta\u017eodis
@@ -999,10 +1039,12 @@ title.view.bookmarks = Parodyti \u017eymas
 title.view.profile.for = Profilis {0} 
 title.view.room.information = Informacija apie kambar\u012f
 title.waiting.to.call = Laukiama skambu\u010dio
+title.warning = Persp\u0117jimas
 title.xmpp.registration = XMPP paskyros kredencialai
 title.yahoo.registration = Yahoo paskyros kredencialai
 title.appearance.showVCards = Vizitini\u0173 korteli\u0173 \u201eVCards\u201c rodymas adresat\u0173 s\u0105ra\u0161e
 title.subscription.request = Prenumeratos pra\u0161ymas
+title.certificate = Sertifikatas
 
 tooltip.place.a.call = Skambinimas asmeniui VOIP telefonu
 tooltip.appearance = Pokalbi\u0173 aplinkos i\u0161vaizdos keitimas
@@ -1014,6 +1056,9 @@ tooltip.start.chat = Prad\u0117ti pokalb\u012f
 tooltip.view.changelog = Per\u017ei\u016br\u0117ti pakeitim\u0173 \u017eurnal\u0105
 tooltip.view.history = Per\u017ei\u016br\u0117ti pokalbi\u0173 \u017eurnal\u0105
 tooltip.view.readme = Skaityti \u201eReadMe\u201c byl\u0105
+tooltip.encryptionmode.required = \u0160ifravimas privalomas norint prisijungti. Jeigu serveris nesi\u016blo \u0161ifravimo arba jei \u0161ifravimo nepavyksta u\u017emegzti, susijungimas su serveriu nepavyks.
+tooltip.encryptionmode.ifpossible = \u0160ifravimas naudojimas kai tai yra \u012fmanoma.
+tooltip.encryptionmode.disabled = \u0160ifravimas i\u0161jungtas ir bus naudojamas tik ne\u0161ifruotas ry\u0161is. Jei \u0161ifravimas reikalaujamas serverio, susijungimas nepavyks.
 
 tree.conference.services = Konferencijos
 tree.users.in.room = Kambaryje apsilank\u0119
@@ -1071,3 +1116,30 @@ stun.server.addr = Stun serveris:
 stun.server.port = Stun prievadas:
 
 #!#
+
+action.viewlog = Per\u017ei\u016br\u0117ti \u017eurnal\u0105
+
+dialog.confirm.to.reveal.visibility.title = Ar esat tikri?
+dialog.confirm.to.reveal.visibility.msg = Jeigu t\u0119site, j\u016bs\u0173 nematomumas bus nutrauktas
+dialog.confirm.close.all.conferences.if.invisible.msg = Jeigu t\u0119site, visi konferencij\u0173 kambariai bus u\u017edaryti
+dialog.certificate.provide.alias.and.confirm = \t Suteikite vard\u0105 Truststore \u012fra\u0161ui. \n Ar tikrai norite prid\u0117ti ?\u012f \n sertifikat\u0105 \u012f j\u016bs\u0173 Truststore?
+dialog.certificate.show = <html>Tai sertifikatas kur\u012f bandote prid\u0117ti \u012f Truststore. <br><br> Po \u0161io sertifikato \u012ftraukimo Spark gal\u0117s u\u017emegzti apsaugot\u0105 <br> ry\u0161\u012f su serveriais kurie identifikuojami su \u0161iuo sertifikatu. <br><br> Jei esate tikri, kad norite prid?ti \u0161\u012f sertifikat\u0105, paspauskite OK mygtuk\u0105.</html>
+dialog.certificate.cannot.have.copy = \u0160is sertifikatas jau yra patalpintas Truststore.
+dialog.certificate.has.been.added = Sertifikatas prid\u0117tas \u012f Truststore.
+dialog.certificate.is.distrusted = Sertifikatas negaliojantis, tod\u0117l jo nereik\u0117t\u0173 pasitik\u0117ti, nes tai gali b\u016bti pavojinga. \n Jei vis tiek norite j\u012f priimti, spauskite Trust mygtuk\u0105 arba prid\u0117kite j\u012f \u012f i\u0161im?i\u0173 s\u0105ra\u0161\u0105.
+dialog.certificate.sure.to.delete = Ar tikrai norite i\u0161trinti \u0161\u012f sertifikat\u0105? \nJeigu tai padarysite, negal?\u0117site u\u017emegzti saugaus ry\u0161io \nsu serveriais identifikuojamais \u0161iuo sertifikatu.
+dialog.certificate.has.been.deleted = Sertifikatas s\u0117kmingai i\u0161trintas.
+
+cert.valid = Galiojantis
+cert.revoked = At\u0161auktas
+cert.expired = Baig\u0117si galiojimas
+cert.not.valid.yet = Dar negaliojantis
+cert.self.signed = "Self signed" 
+cert.unknown.oid = Ne\u017einomas OID apra\u0161as.
+cert.is.critical = Yra kriti\u0161ka: 
+cert.critical = Kriti\u0161ka:
+cert.not.critical = Ne kriti\u0161ka: 
+
+cert.extensions = Sertifikato extensions:
+cert.extensions.unsupported = Nepalaikomi extensions
+cert.extension.extended.usage.digital.signature = Skaitmeninis para\u0161as
