--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -1181,13 +1181,13 @@ action.viewlog=View Log
 
 dialog.confirm.to.reveal.visibility.title=Are you sure?
 dialog.confirm.to.reveal.visibility.msg=If you are going to proceed your invisibility will be revealed
-dialog.confirm.close.all.conferences.if.invisible.msg=If you want to proceed all conference room will be closed
+dialog.confirm.close.all.conferences.if.invisible.msg = If you want to proceed all conference rooms will be closed
 dialog.certificate.provide.alias.and.confirm = \t Provide alias for Truststore entry. \n Are you sure you want to add this \n certificate to your Truststore?
-dialog.certificate.show = <html>This is the certificate you are trying to add to the Truststore. <br><br> After adding this certificate, Spark will be able to establish secured <br> communications with servers that are identified by this certificate. <br><br> If you are sure that you want to add this certificate click the OK button.</html>
+dialog.certificate.show = <html>This is the certificate you are trying to add to the Truststore. <br><br> After adding this certificate Spark will be able to establish secured <br> communications with servers that are identified by this certificate. <br><br> If you are sure that you want to add this certificate click the OK button.</html>
 dialog.certificate.cannot.have.copy = This certificate is already stored within Truststore.
 dialog.certificate.has.been.added = Certificate has been added to the Truststore.
-dialog.certificate.is.distrusted = Certificate is invalid so it shouldn't be trusted as it is dangerous. \n If you still want to trust click on Trust radio button or add it to exception list.
-dialog.certificate.sure.to.delete = Are you sure that you want to delete this certificate? \nIf you will do it you will be unable to establish secured connection \nto servers that are identified by this certificate.
+dialog.certificate.is.distrusted = Certificate is invalid, so it shouldn't be trusted, as it is dangerous. \n If you still want to trust it, click on Trust radio button or add it to exception list.
+dialog.certificate.sure.to.delete = Are you sure that you want to delete this certificate? \nIf you do it, you will be unable to establish a secured connection \nto servers identified by this certificate.
 dialog.certificate.has.been.deleted = Certificate has been successfully deleted.
 
 cert.valid = Valid
